[project]
name = "error-helper"
version = "1.4"
description = "Minimalistic python module to print colorful messages"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 5 - Production/Stable",
]
license = "MIT"
authors = [{ name = "Bobbe", email = "mail@30350n.de" }]

[dependency-groups]
dev = ["ruff"]

[project.urls]
Homepage = "https://github.com/30350n/error_helper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "strict"

[tool.hatch.build]
exclude = [".git", ".github/"]
include = ["*.py", "py.typed"]

[tool.hatch.build.targets.wheel.sources]
"" = "error_helper"
[tool.hatch.build.targets.sdist.force-include]
"__init__.py" = "error_helper/__init__.py"
"py.typed" = "error_helper/py.typed"

[tool.ruff]
line-length = 100

[tool.ruff.format]
line-ending = "lf"
